# CXX_benchmarks_5

./: CMakeLists.txt  CXX_benchmarks_5.kdev4  README.md  main.cpp
.kdev4/: CXX_benchmarks_5.kdev4
benchmarks/: Benchmark1.cpp  Benchmark2.cpp  Benchmarks.h  CMakeLists.txt  TimeMeasurement.cpp  TimeMeasurement.h
